--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,3 +8,11 @@
     background-color: #00f9ff;
     background-image: linear-gradient(120deg, #155799, #00f9ff);
 }
+
+h1,
+h2,
+h3,
+h4
+{
+    color: #155799;
+}
