--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
         <code>
-            This is some test stuff
+            public static void main(String args[]){ }
         </code>
         <footer class="site-footer">
             {% if site.github.is_project_page %}
