--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,12 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+      <pre>
         <code>
             public static void main(String args[]){ }
         </code>
+      </pre>
+        
         <footer class="site-footer">
             {% if site.github.is_project_page %}
                 <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
