--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
-      <pre>
+      <pre class="highlight">
         <code>
             public static void main(String args[]){ }
         </code>
