--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header class="page-header" role="banner">
-        <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        <h1 class="project-name"><a href="{{ site.url }}">{{ page.title | default: site.title | default: site.github.repository_name }}</a></h1>
         <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="{{ site.github.owner_url }}" class="btn" target="_blank">GitHub</a>
         {% if site.github.is_project_page %}
